# chat

./: db.sqlite3  pyproject.toml
apps/embedding/: apps.py  models.py  views.py
chat/: settings.py  urls.py
templates/: upload.html
