[tool.poetry]
name = "chat"
version = "0.1.0"
description = "智能知识库"
authors = ["lianghao"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.14"
djangorestframework = "^3.15.2"
django-filter = "23.2"
langchain = "^0.2.3"
psycopg2-binary = "2.9.7"
pymupdf = "1.24.1"
openai = "^1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
